# PR_Orchestrator_MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  demo.md  threat-model.md  tool-spec.md
scripts/: run_server.sh  smoke_test.sh
src/pr_orchestrator/: __init__.py  config.py  constants.py  server.py  state.py
src/pr_orchestrator/artifacts/: __init__.py  bundler.py  report.py
src/pr_orchestrator/git/: __init__.py  branch_strategy.py  repo_ops.py
src/pr_orchestrator/github/: __init__.py  api.py  auth.py  templates.py
src/pr_orchestrator/policy/: __init__.py  allowlist.py  limits.py  redaction.py
src/pr_orchestrator/qa/: __init__.py  detect.py  failure_parser.py  install.py  lint.py  tests.py
src/pr_orchestrator/sandbox/: __init__.py  backend.py  e2b_code.py  e2b_desktop.py  workspace_store.py
src/pr_orchestrator/telemetry/: __init__.py  logger.py  run_store.py
src/pr_orchestrator/tools/: __init__.py  approval_tools.py  artifact_tools.py  edit_tools.py  github_tools.py  qa_tools.py  repo_tools.py  workspace_tools.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_github_ensure_fork_mocked.py  test_repo_operations.py
tests/unit/: __init__.py  test_approval_multiuse.py  test_github_head_format.py  test_pr_body_validation.py  test_repo_allowlist_enforced.py  test_safe_mode_pip_uv_restrictions.py  test_shared_store.py  test_workspace.py
